--- a/templates/index.html
+++ b/templates/index.html
@@ -1,69 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="static/css/styles.css">
+    <link rel="stylesheet" href="/static/css/styles.css">
     <title>Home</title>
 </head>
-
 <body>
-    <h1>Welcome!</h1>
+    <header>
+        <h1>GroupieTracker</h1>
+    </header>
     <div class="container">
-        {{ range .Data }}
-        <div class="frame">
+        {{ range . }}
+        <article class="card">
             <div class="image-name">
-                <div class="image">
-                    <img src="{{.Image}}" alt="{{.Name}}">
-                </div>
-                <h2 class="group-name">{{.Name}}</h2>
-            </div>
-            <div class="group-info">
-                <p><strong>Creation Date: </strong> {{.CreationDate}}</p>
-                <p>First Album: {{.FirstAlbum}}</p>
+                <img src="{{.Image}}" alt="{{.Name}}" srcset="">
+                <h3><strong>Band Name: </strong> {{.Name}}</h3>
             </div>
             <div class="members">
-                <p><strong> Members: </strong>{{range .Members}} {{.}}<br /> {{end}} </p>
+                <h4>Members:</h4>
+                    <ol>
+                        {{ range .Members}}
+                            <li>{{.}}</li>
+                        {{end}}
+                    </ol>
             </div>
-            <!-- Hidden form to simulate POST request -->
-            <form action="/process-url" method="POST" class="process-form" style="display: none;">
-                <input type="hidden" name="url">
-            </form>
-            <!-- Link to trigger the form submit -->
-            <p><strong>Relations: </strong><a href="{{.Relations}}" class="relations">{{ .Relations }}</a></p>
-        </div>
-        
-        {{ end }}
-        <div id="response">
-            <ul>
-                {{ if .Id }}
-                    <p>ID: {{ .Id }} </p>
-                    {{ range $city, $dates := .DatesLocations }}
-                    <li>City: {{ $city }} <br/> Dates: {{ $dates }}</li>
-                    {{ end }}
-                {{end}}
-            </ul>
-        </div>
+            <div class="album">
+                <h4>Creation Date: <span class="value">{{.CreationDate}}</span></h4>
+                <h4>First Album: <span class="value"> {{.FirstAlbum}}</span></h4>
+            </div>
+            <div class="links">
+                <div class="locations">
+                    <form action="/locations" method="POST">
+                        <strong>Locations:</strong>
+                        <input type="hidden" name="url" value="{{.Locations}}">
+                        <input type="hidden" name="bandName" value="{{.Name}}">
+                        <input type="submit" value="view available locations" class="btn">
+                    </form>
+                </div>
+                <div class="dates">
+                    <form action="/dates" method="POST">
+                        <strong>Concert Dates:</strong>
+                        <input type="hidden" name="url" value="https://groupietrackers.herokuapp.com/api/dates/{{.Id}}">
+                        <input type="submit" value="view Concert Dates" class="btn">
+                    </form>
+                </div>
+                <div class="relations">
+                    <form action="/relations" method="POST">
+                        <strong>Relations:</strong>
+                        <input type="hidden" value="{{.Relations}}">
+                        <input type="submit" value="view Relations" class="btn">
+                    </form>
+                </div>
+            </div>
+        </article>
+        {{end}}
+    </div>
 </body>
-
-<script>
-    document.querySelectorAll('.relations').forEach((link) => {
-        link.addEventListener('click', (e) => {
-            e.preventDefault(); // Prevent the default link behavior
-
-            // Get the URL from the href attribute of the clicked link
-            const url = e.target.href;
-
-            // Update the form action and input value
-            const form = e.target.closest('.frame').querySelector('.process-form');
-            form.action = '/process-url';
-            form.querySelector('[name=url]').value = url;
-
-            // Simulate form submission programmatically
-            form.submit();
-        });
-    });
-</script>
-
 </html>
