--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -15,21 +15,21 @@ body {
 }
 
 h3 {
-    color:white;
-    background-color: #8A9BBA;
-    border-radius: 5px;
+  color: white;
+  background-color: #8a9bba;
+  border-radius: 5px;
 }
 
 h4 {
-    color: green;
-    font-weight: 200;
+  color: green;
+  font-weight: 200;
 }
 
 header {
   width: 100%;
   padding: 30px;
   border-bottom: 1px solid #ccc;
-   background-color: #F0F0F0;
+  background-color: #f0f0f0;
   margin-bottom: 10px;
   font-style: italic;
   position: fixed;
@@ -37,8 +37,10 @@ header {
   top: 0;
   z-index: 999;
   color: green;
+  font-family: "Kalnia Glaze";
 }
 .container {
+    font-family: 'Playfair Display';
   background-color: rgb(255, 255, 255);
   width: 80%;
   margin: 20px auto;
@@ -90,7 +92,7 @@ header {
   margin: 10px;
   border-radius: 5px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Added box-shadow */
-   background-color: #f7f4d5;
+  background-color: #fffffe;
 }
 
 .image-name {
@@ -106,12 +108,12 @@ header {
   width: 100px;
   height: 100px;
   margin: auto;
-   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Added box-shadow */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Added box-shadow */
 }
 
 .image-name h3 {
   width: 100%;
-  margin:5px 2px;
+  margin: 5px 2px;
   padding: 3px 6px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Added box-shadow */
 }
@@ -131,7 +133,7 @@ header {
 
 .members ol {
   list-style-type: none;
-  background-color: #F0F0F0;
+  background-color: #f0f0f0;
   padding: 5px 10px;
   border-radius: 5px;
   width: 100%;
@@ -139,8 +141,8 @@ header {
 }
 
 .members ol li {
-    padding: 1px;
-    font-size: small;
+  padding: 1px;
+  font-size: small;
 }
 
 .links,
@@ -164,15 +166,16 @@ header {
 
 .value {
   font-weight: normal;
-  background-color: #F0F0F0;
-  padding: 3px;
+  background-color: #f0f0f0;
+  padding: 3px 5px;
   color: black;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Added box-shadow */
+  margin-left: 2px;
 }
 
 .pageNav {
   width: 100%;
-  background-color: rgb(188, 186, 186);
+  background-color: #edede1;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -181,4 +184,5 @@ header {
   gap: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Added box-shadow */
   border-radius: 5px;
+  color:#12387f;
 }
