--- a/templates/index.html
+++ b/templates/index.html
@@ -3,18 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@700..700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kalnia+Glaze:wght@100..700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="/static/css/styles.css" />
     <title>Home</title>
   </head>
   <body>
     <header>
-      <h1>GroupieTracker</h1>
+      <h1>Groupie Tracker</h1>
     </header>
     <div class="container">
       {{ range .Bands }}
       <article class="card">
         <div class="image-name">
-          <img src="{{.Image}}" alt="{{.Name}}" srcset="" />
+          <img src="{{.Image}}" alt="{{.Name}}" title="{{.Name}}" />
           <h3>{{.Name}}</h3>
         </div>
         <div class="members">
