--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -149,7 +149,9 @@ header {
   list-style-type: none;
   background-color: #f0f0f0;
   padding: 5px 10px;
+  border: 1px solid gold;
   border-radius: 5px;
+  border-style: outset;
   width: 100%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   position:absolute;
