script: added a script to auto hide the members section on mouseout

--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,9 @@
           <h3>{{.Name}}</h3>
         </div>
         <div class="members">
-          <h4 class="view-members" data-target="#members-{{.Id}}">Click To View Band Members</h4>
+          <h4 class="view-members" data-target="#members-{{.Id}}">
+            Click To View Band Members
+          </h4>
           <ol id="members-{{.Id}}" class="members-list">
             {{ range .Members }}
             <li>{{.}}</li>
@@ -79,7 +81,8 @@
       <div class="pageNav">
         {{ if gt .CurrentPage 1 }}
         <a href="/?page={{ sub .CurrentPage 1 }}">Previous</a>
-        {{ end }} Page {{ .CurrentPage }} of {{ .TotalPages }} {{ if lt .CurrentPage .TotalPages }}
+        {{ end }} Page {{ .CurrentPage }} of {{ .TotalPages }} {{ if lt
+        .CurrentPage .TotalPages }}
         <a href="/?page={{ add .CurrentPage 1 }}">Next</a>
         {{ end }}
       </div>
@@ -88,33 +91,41 @@
       <h3>&COPY; 2024 groupietracker</h3>
     </footer>
   </body>
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const loadingIndicator = document.querySelector(".loading");
-        loadingIndicator.classList.add("hidden");
-        const contentContainers = document.querySelectorAll("#content");
-        contentContainers.forEach((container) => {
-          container.classList.remove("hidden");
+  <script>
+    document.addEventListener("DOMContentLoaded", function () {
+      const loadingIndicator = document.querySelector(".loading");
+      loadingIndicator.classList.add("hidden");
+      const contentContainers = document.querySelectorAll("#content");
+      contentContainers.forEach((container) => {
+        container.classList.remove("hidden");
+      });
+    });
+
+    let links = document.querySelectorAll(".view-members");
+
+    links.forEach((link) => {
+      link.addEventListener("click", () => {
+        // Get the target selector from the data attribute
+        let targetSelector = link.getAttribute("data-target");
+        let members = document.querySelector(targetSelector);
+
+        // Toggle display of the targeted members list
+        if (members.style.display === "block") {
+          members.style.display = "none";
+          link.innerHTML = "Click To View Band Members";
+        } else {
+          members.style.display = "block";
+          link.innerHTML = "Click To Hide Band Members";
+        }
+
+        // Restart the timeout if mouse leaves the members element
+        link.addEventListener("mouseout", () => {
+          time = setTimeout(() => {
+            members.style.display = "none";
+            link.innerHTML = "Click To View Band Members";
+          }, 2000);
         });
       });
-
-      let links = document.querySelectorAll('.view-members');
-
-      links.forEach((link) => {
-        link.addEventListener('click', () => {
-          // Get the target selector from the data attribute
-          let targetSelector = link.getAttribute('data-target');
-          let members = document.querySelector(targetSelector);
-
-          // Toggle display of the targeted members list
-          if (members.style.display === 'block') {
-            members.style.display = 'none';
-            link.innerHTML = "Click To View Band Members"
-          } else {
-            members.style.display = 'block';
-            link.innerHTML = "Click To Hide"
-          }
-        });
-      });
-    </script>
+    });
+  </script>
 </html>
